// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Definitions actionToFormEvent Initialize 1`] = `
Object {
  "action": "Initialize",
  "category": "Form",
  "event": "Interactions",
  "label": "formName",
  "value": undefined,
}
`;

exports[`Event Definitions actionToFormEvent Submit 1`] = `
Object {
  "action": "Submit",
  "category": "Form",
  "event": "Interactions",
  "label": "formName",
  "value": 1,
}
`;

exports[`Event Definitions actionToFormEvent Submit Failure 1`] = `
Object {
  "action": "Submit Failure",
  "category": "Form",
  "event": "Interactions",
  "label": "formName",
  "value": undefined,
}
`;

exports[`Event Definitions actionToFormEvent Submit Success 1`] = `
Object {
  "action": "Submit Success",
  "category": "Form",
  "event": "Interactions",
  "label": "formName",
  "value": undefined,
}
`;

exports[`Event Definitions actionToFormEvent Validation Success 1`] = `
Object {
  "action": "Validation Success",
  "category": "Form",
  "event": "Interactions",
  "label": "formName",
  "value": undefined,
}
`;

exports[`Event Definitions actionToFormEvent invokes the callback when provided 1`] = `
Object {
  "action": "Validation Error",
  "category": "Form",
  "event": "Interactions",
  "label": "formName: {\\"field1\\": \\"required\\"}",
  "value": undefined,
}
`;
